# automuse

./: .gitignore  CHANGELOG.md  LICENSE.txt  Makefile  README.md  music_theory.ipynb  py.typed  pyproject.toml
automuse/: __init__.py  guesser.py  guitar.py  midi.py  modes.py  scale.py  transforms.py
automuse/chord/: __init__.py  counted.py
docs/: update.bat
docs/source/: automuse.chord.rst  automuse.rst  conf.py  index.rst  install-and-build.rst  modules.rst  omusic.rst
docs/source/guides/: index.rst
docs/source/guides/examples/: circle_of_fifths.ipynb  guesser.ipynb  guitar.ipynb  introduction.ipynb  machinery.ipynb  midi.ipynb  music_theory.ipynb  transforms.ipynb
docs/source/media/: fifths.drawio  fifths_geometry.drawio
omusic/: __init__.py  chord.py  guesser.py  guitar.py  midi.py  modes.py  requirements.txt  scale.py
