[project]

name = "automuse"
version = "2.0.1"
description = "A computerisation of western music theory."
requires-python = ">= 3.12.0"

authors = [
    {name = "Yiding Li", email = "commit@lyodine.com"},
]

readme = "README.md"

license-files = ["LICENSE.txt"]

keywords = ["Music Theory"]

# Overtagging
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License"
]

dependencies=[
    "mido>=1.3.3",
    "matplotlib>=3.10.1"
]

[build-system]
requires = ["setuptools >= 70.1.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.pyright]
reportUnknownMemberType = false

[project.urls]
Documentation = "https://yidingli.com/docs/automuse/"
Repository = "https://yidingli.com/projects/automuse/"
